--- a/03_ElasticSearch_StatefulSet.yaml
+++ b/03_ElasticSearch_StatefulSet.yaml
@@ -52,7 +52,6 @@ metadata:
   labels:
     k8s-app: elasticsearch-logging
     version: v7.3.2
-    addonmanager.kubernetes.io/mode: Reconcile
 spec:
   serviceName: elasticsearch-logging
   replicas: 2
@@ -68,7 +67,7 @@ spec:
     spec:
       serviceAccountName: elasticsearch-logging
       containers:
-      - image: quay.io/fluentd_elasticsearch/elasticsearch:v7.3.2
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.3.2
         name: elasticsearch-logging
         imagePullPolicy: Always
         resources:
@@ -81,25 +80,28 @@ spec:
             memory: 1Gi
         ports:
         - containerPort: 9200
-          name: db
+          name: http
           protocol: TCP
         - containerPort: 9300
           name: transport
           protocol: TCP
         volumeMounts:
         - name: elasticsearch-logging
-          mountPath: /data
+          mountPath: /usr/share/elasticsearch/data
         env:
-        - name: "NAMESPACE"
+        - name: "cluster.name"
+          value: "elasticsearch-logging"
+        - name: "node.name"
           valueFrom:
             fieldRef:
-              fieldPath: metadata.namespace
+              fieldPath: metadata.name
+        - name: "discovery.seed_hosts"
+          value: "elasticsearch-logging-0,elasticsearch-logging-1"
+        - name: "cluster.initial_master_nodes"
+          value: "elasticsearch-logging-0,elasticsearch-logging-1"
       volumes:
       - name: elasticsearch-logging
         emptyDir: {}
-      # Elasticsearch requires vm.max_map_count to be at least 262144.
-      # If your OS already sets up this number to a higher value, feel free
-      # to remove this init container.
       initContainers:
       - image: alpine:3.6
         command: ["/sbin/sysctl", "-w", "vm.max_map_count=262144"]
