--- a/06_Kibana_Deployment.yaml
+++ b/06_Kibana_Deployment.yaml
@@ -22,18 +22,15 @@ spec:
       - name: kibana-logging
         image: docker.elastic.co/kibana/kibana-oss:7.3.2
         resources:
-          # need more cpu upon initialization, therefore burstable class
           limits:
             cpu: 1000m
           requests:
             cpu: 100m
         env:
           - name: ELASTICSEARCH_HOSTS
-            value: http://elasticsearch-logging:9200
+            value: http://elasticsearch-logging.efklog.svc:9200
           - name: SERVER_NAME
             value: kibana-logging
-         # - name: SERVER_BASEPATH
-         #   value: /api/v1/namespaces/efk-aks/services/kibana-logging/proxy
           - name: SERVER_REWRITEBASEPATH
             value: "false"
         ports:
