--- a/04_Fluentd_ConfigMap.yaml
+++ b/04_Fluentd_ConfigMap.yaml
@@ -1,75 +1,143 @@
-apiVersion: v1
 kind: ConfigMap
+apiVersion: v1
 metadata:
-  name: fluentd-config
+  name: fluentd-es-config-v0.2.0
   namespace: efklog
   labels:
-    k8s-app: fluentd-logging
+    addonmanager.kubernetes.io/mode: Reconcile
 data:
-  fluent.conf: |
+  system.conf: |-
+    <system>
+      root_dir /tmp/fluentd-buffers/
+    </system>
+
+  containers.input.conf: |-
+    # Collect logs from specific Kubernetes components
     <source>
+      @id kubelet.log
       @type tail
-      path /var/log/containers/*.log
-      pos_file /var/log/containers/fluentd-containers.log.pos
-      tag kubernetes.*
-      format json
-      time_key time
-      time_format %Y-%m-%dT%H:%M:%S.%N%z
-      read_from_head true
-      <parse>
-        @type multi_format
-        <pattern>
-          format json
-          time_key time
-          time_format %Y-%m-%dT%H:%M:%S.%N%z
-        </pattern>
-        <pattern>
-          format regexp
-          expression /^(?<time>[^ ]* [^ ]*) (?<stream>[^ ]*) (?<log>.*)$/
-          time_format %Y-%m-%dT%H:%M:%S.%N%z
-        </pattern>
-      </parse>
+      format multiline
+      multiline_flush_interval 5s
+      format_firstline /^\w\d{4}/
+      format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+      time_format %m%d %H:%M:%S.%N
+      path /var/log/kubelet.log
+      pos_file /var/log/es-kubelet.log.pos
+      tag kubelet
     </source>
 
-    <filter kubernetes.**>
-      @type kubernetes_metadata
-    </filter>
+    <source>
+      @id kube-proxy.log
+      @type tail
+      format multiline
+      multiline_flush_interval 5s
+      format_firstline /^\w\d{4}/
+      format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+      time_format %m%d %H:%M:%S.%N
+      path /var/log/kube-proxy.log
+      pos_file /var/log/es-kube-proxy.log.pos
+      tag kube-proxy
+    </source>
 
-    # Filter to include only logs for specific components
-    <filter kubernetes.**>
-      @type grep
-      <regexp>
-        key $.kubernetes.container_name
-        pattern /(kube-apiserver|kube-scheduler|kube-controller-manager)/
-      </regexp>
-    </filter>
+    <source>
+      @id kube-apiserver.log
+      @type tail
+      format multiline
+      multiline_flush_interval 5s
+      format_firstline /^\w\d{4}/
+      format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+      time_format %m%d %H:%M:%S.%N
+      path /var/log/kube-apiserver.log
+      pos_file /var/log/es-kube-apiserver.log.pos
+      tag kube-apiserver
+    </source>
 
+    <source>
+      @id kube-controller-manager.log
+      @type tail
+      format multiline
+      multiline_flush_interval 5s
+      format_firstline /^\w\d{4}/
+      format1 /^(?<severity>\w)(?<time>\d{4} [^\s]*)\s+(?<pid>\d+)\s+(?<source>[^ \]]+)\] (?<message>.*)/
+      time_format %m%d %H:%M:%S.%N
+      path /var/log/kube-controller-manager.log
+      pos_file /var/log/es-kube-controller-manager.log.pos
+      tag kube-controller-manager
+    </source>
+
+    # Collect Docker logs
+    <source>
+      @id docker.log
+      @type tail
+      format json
+      path /var/log/docker/*.log
+      pos_file /var/log/es-docker.log.pos
+      tag docker
+    </source>
+
+  forward.input.conf: |-
+    <source>
+      @id forward
+      @type forward
+    </source>
+
+  monitoring.conf: |-
+    # Prometheus Exporter Plugin
+    <source>
+      @id prometheus
+      @type prometheus
+    </source>
+
+    <source>
+      @id monitor_agent
+      @type monitor_agent
+    </source>
+
+    <source>
+      @id prometheus_monitor
+      @type prometheus_monitor
+      <labels>
+        host ${hostname}
+      </labels>
+    </source>
+
+    <source>
+      @id prometheus_output_monitor
+      @type prometheus_output_monitor
+      <labels>
+        host ${hostname}
+      </labels>
+    </source>
+
+    <source>
+      @id prometheus_tail_monitor
+      @type prometheus_tail_monitor
+      <labels>
+        host ${hostname}
+      </labels>
+    </source>
+
+  output.conf: |-
     <match **>
+      @id elasticsearch
       @type elasticsearch
       @log_level info
+      type_name _doc
       include_tag_key true
-      host elasticsearch-logging.efklog.svc.cluster.local
+      host elasticsearch-logging
       port 9200
       logstash_format true
-      logstash_prefix kubernetes
-      logstash_dateformat %Y.%m.%d
-      type_name _doc
-      scheme http
-      ssl_verify false
-      user elastic
-      password changeme
-      reload_connections true
-      reconnect_on_error true
-      request_timeout 120s
-      time_key @timestamp
-      time_key_exclude_timestamp false
-      utc_index true
-      buffer_chunk_limit 2M
-      buffer_queue_limit 8
-      flush_interval 5s
-      max_retry_wait 30s
-      disable_retry_limit false
-      retry_wait 1s
-      retry_max_interval 30
-      num_threads 1
+      <buffer>
+        @type file
+        path /var/log/fluentd-buffers/kubernetes.system.buffer
+        flush_mode interval
+        retry_type exponential_backoff
+        flush_thread_count 2
+        flush_interval 5s
+        retry_forever
+        retry_max_interval 30
+        chunk_limit_size 2M
+        queue_limit_length 8
+        overflow_action block
+      </buffer>
     </match>
